# medical_image_classification

./: .gitignore  evaluate_model.py  main.py  preload.py  pyproject.toml  run_code.ipynb  split_dataset.py  split_dataset_augmentation.py  train.py  trainA.py  trainB.py
configs/: config.yaml  data_config.yaml  train_config.yaml
configs/dataset/: chest_X_ray.yaml  customized.yaml
configs/network/: coatnet_1.yaml  coatnet_2.yaml  coatnet_3.yaml  coatnet_3_reg  coatnet_3sidevit_1.yaml  coatnet_3sidevit_2.yaml  coatnet_3sidevit_3.yaml  coatnet_3sidevit_mlp_3.yaml  coatnet_4.yaml  coatnet_5.yaml  resnet_1.yaml  resnet_2.yaml  resnet_3.yaml  resnet_fc_1.yaml  resnet_mlp_1.yaml  resnet_sidevit_fc.yaml  resnet_sidevit_fc_cnn.yaml  resnet_sidevit_ffn_fc.yaml  resnet_sidevit_ffn_mlp.yaml  resnet_sidevit_mlp.yaml  resnet_sidevit_mlp_cnn.yaml  resnet_sidevit_sv.yaml  resnet_sidevit_sv_3rdvit.yaml  resnet_sidevit_sv_cnn.yaml
configs/solver/: adamw.yaml
data/: builder.py  transforms.py
src/: builder.py  coatnet_models.py  frozen_resnet_vit.py  frozen_vit.py  loss.py  model4.py  old_models.py  resnet_models.py  side_resnet_vit.py  side_vit.py  side_vit_cnn.py
src/utils/: func.py  metrics.py
