[project]
name = "MIC"
version = "0.1.0"
description = ""
authors = [
    {name = "a.espahbodi",email = "dev.amir.espahbodi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers (>=5.10.2,<6.0.0)",
    "huggingface-hub (>=1.18.0,<2.0.0)",
    "torcheval (>=0.0.7,<0.0.8)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "*", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu132" # torch-2.12.0
priority = "explicit"
